# Web-Chiptune-Player

./: .gitattributes  .gitignore  README.md  demo.html
Web-Chiptune-Player/: chiptune-worker.js  web-chiptune-functions.js
Web-Chiptune-Player/Web-GME-Player/: gme-worker.js
Web-Chiptune-Player/Web-PSF-Player/: Web-PSF-Player.js  Web-PSF-Player.wasm
Web-Chiptune-Player/Web-VGM-Player/: Web-VGM-Player.wasm
docs/: demo.html
docs/test-music/: 04 Hydra (Normal Boss).vgz  Madou Monogatari 1-2-3 (MSX)(1990)(Compile).m3u
sources/: plan-for-how-to-program-gme-workers.txt
sources/Web-GME-Player/: README.md  main.c
sources/Web-GSF-Player/: README.md  get-gsf2wav.bash  get-lazygsf.bash
sources/Web-KSS-Player/: Forum question draft.md
sources/Web-KSS-Player/libkss-modifications/: CMakeLists.txt
sources/Web-KSS-Player/libkss-modifications/example/: kss2wav.c
sources/Web-PSF-Player/: build main.c .txt  main.c  upse-1.0.0 source.txt
sources/Web-VGM-Player/: libvgm library note.md  main-old.cpp  main.cpp  main.cpp compile.txt
test-music/: 102 The Brink of Death.psf  source.txt
test-music/Advance Wars (EMU).zophar/: 03 Wars World News.minigsf  04 Time to Battle.minigsf  05 Neil's Theme.minigsf  09 Olaf's Theme.minigsf  10 Grit's Theme.minigsf  12 Drake's Theme.minigsf  13 Kanbei's Theme.minigsf  14 Sonja's Theme.minigsf  19 Count Up.minigsf  20 Defeated.minigsf  24 It's Finally Over.minigsf
test-music/Iridion 3D (2001-05-29)(Shin'en)(Majesco)[GBA]/: !playlist.m3u  (+11 more)
web/: chiptune-worker.js  web-chiptune-functions (copy).js  web-chiptune-functions.js
(+380 files in other folders)
